welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:8: error: not found: value x
		if(x==1){return true}
                   ^noTriples:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if(x==1){return true}
                ^